@@ -6,6 +6,8 @@ Katrina LaCurts <lacurts@mit.edu>
 Sanjoy Mahajan <sanjoy@olin.edu>
 Joe Steinmeyer <jodalyst@mit.edu>
 Rodrigo Toste Gomes <rgomes@codeblurb.com>
+Tomas Lozano-Perez <tlp@mit.edu>
+
 
 Security Reports:
 -----------------
